--- a/ansible_playbooks/rhel7-apache/vars/sigsci.yml
+++ b/ansible_playbooks/rhel7-apache/vars/sigsci.yml
@@ -1,3 +1,3 @@
 ---
-agent_access_key: "31b41e53-30a9-4ee9-b2e2-a7f71810a4b3" 
-agent_secret_key: "DDvEmWYNNsQrVNRjQE6szMf6iweNp_R-snlEPAM3PvE"
+agent_access_key: "INSERT ACCESS KEY" 
+agent_secret_key: "INSERT SECRET KEY"
