--- a/ansible-playbooks/ubuntu18.04-apache/apache-ubuntu-deployment-playbook.yml
+++ b/ansible-playbooks/ubuntu18.04-apache/apache-ubuntu-deployment-playbook.yml
@@ -1,5 +1,5 @@
 ---
-- name: Installing Apache software packages
+- name: Setting up server with Apache HTTP Server
   hosts: apache-servers
   become: true
   vars:
