--- a/ansible-playbooks/ubuntu18.04-nginx1.14.0/sigsci-nginx-deployment-playbook.yml
+++ b/ansible-playbooks/ubuntu18.04-nginx1.14.0/sigsci-nginx-deployment-playbook.yml
@@ -1,5 +1,5 @@
 ---
-- name: Deploying Signal Sciences 
+- name: Deploying Signal Sciences to NGINX Servers
   hosts: nginx-servers
   become: true
   vars_files:
