--- a/ansible-playbooks/centos7-apache/sigsci-apache-deployment-playbook.yml
+++ b/ansible-playbooks/centos7-apache/sigsci-apache-deployment-playbook.yml
@@ -3,7 +3,7 @@
   hosts: apache-servers
   become: true
   vars_files:
-    - ../../ansible-playbooks/vars/keys.yml
+    - ../vars/keys.yml
   tasks:
     - name: Add SigSci Package Repositories on CentOS7
       file:
