--- a/ansible-playbooks/ubuntu18.04-apache/sigsci-apache-deployment-playbook.yml
+++ b/ansible-playbooks/ubuntu18.04-apache/sigsci-apache-deployment-playbook.yml
@@ -3,7 +3,7 @@
   hosts: apache-servers
   become: true
   vars_files:
-    - ../../sigsci-deploy/vars/keys.yml
+    - ../vars/keys.yml
   tasks:
     - name: Add SigSci Package Repositories on Ubuntu 18.04
       apt_key:
