--- a/ansible-playbooks/ubuntu18.04-nginx1.14.0/sigsci-nginx-deployment-playbook.yml
+++ b/ansible-playbooks/ubuntu18.04-nginx1.14.0/sigsci-nginx-deployment-playbook.yml
@@ -8,7 +8,7 @@
   hosts: nginx-servers
   become: true
   vars_files:
-    - ../../sigsci-deploy/vars/keys.yml
+    - ../vars/keys.yml
   tasks:
     - name: Add SigSci Package Repositories on Ubuntu 18.04
       apt_key:
