--- a/cloud-foundry/cf_sigsci_manifest.yaml
+++ b/cloud-foundry/cf_sigsci_manifest.yaml
@@ -10,4 +10,7 @@ applications:
     env:
       SIGSCI_ACCESSKEYID: 'sigsci-accesskey'            #required
       SIGSCI_SECRETACCESSKEY: 'sigsci-secretaccesskey'  #required
-      SIGSCI_REVPROXY_LISTENER=: "example2:{listener=https://10.11.12.13:443,upstreams=https://192.168.1.2:8443,tls-cert=/etc/sigsci/server-cert.pem,tls-key=/etc/sigsci/server-key.pem}" #required if using HTTPS
+      #required if using HTTP
+      SIGSCI_REVPROXY_LISTENER: "example1:{listener=http://10.11.12.13:80,upstreams=http://192.168.1.2:80}"
+      #required if using HTTPS
+      SIGSCI_REVPROXY_LISTENER=: "example2:{listener=https://10.11.12.13:443,upstreams=https://192.168.1.2:8443,tls-cert=/etc/sigsci/server-cert.pem,tls-key=/etc/sigsci/server-key.pem}" 
